src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Owner_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonAccount</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (PersonAccount)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryMemberConsumerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrimaryMemberConsumerId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Information__c</fullName>
        <inlineHelpText>Enter the new product information for Frame or Contacts to save the case. Check the Original Product box below if you are entering the information of the original product.</inlineHelpText>
        <label>Product Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Lenses</fullName>
                </value>
                <value>
                    <fullName>Frame</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Special Order Request</fullName>
                </value>
                <value>
                    <fullName>Stock Order Status</fullName>
                </value>
                <value>
                    <fullName>Product Mapping</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>2020 Source (Affiliate)</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Cash Receipts</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>EDI Membership</fullName>
                </value>
                <value>
                    <fullName>Email Update</fullName>
                </value>
                <value>
                    <fullName>Explanation of Payment (EOP)</fullName>
                </value>
                <value>
                    <fullName>Eyeconic Ops</fullName>
                </value>
                <value>
                    <fullName>Eyeconic USC</fullName>
                </value>
                <value>
                    <fullName>Eye Health Management (EHM)</fullName>
                </value>
                <value>
                    <fullName>Lab Opt Out</fullName>
                </value>
                <value>
                    <fullName>Level</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>HP Plan Admin</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>MetLife</fullName>
                </value>
                <value>
                    <fullName>Molina</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Office Hours Update</fullName>
                </value>
                <value>
                    <fullName>otto</fullName>
                </value>
                <value>
                    <fullName>Practice Report</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Regence</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Fees</fullName>
                </value>
                <value>
                    <fullName>Retinal Imaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualtrics_Case_Owner__c</fullName>
        <description>First Name of the Case Owner. Used in Qualtrics emails.</description>
        <formula>Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualtrics Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Details__c</fullName>
        <label>Reason Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 or more Dependents</fullName>
                </value>
                <value>
                    <fullName>A - C</fullName>
                </value>
                <value>
                    <fullName>Accessing Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Add/Update Member/Dependent</fullName>
                </value>
                <value>
                    <fullName>Adding Dependent</fullName>
                </value>
                <value>
                    <fullName>Additional Doctor Payments</fullName>
                </value>
                <value>
                    <fullName>Add Provider / Office</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Add Service(s)</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>All Other Providers</fullName>
                </value>
                <value>
                    <fullName>Authorizations</fullName>
                </value>
                <value>
                    <fullName>Available Services</fullName>
                </value>
                <value>
                    <fullName>Backdating</fullName>
                </value>
                <value>
                    <fullName>Benefit Not Covered</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Benefits Description</fullName>
                </value>
                <value>
                    <fullName>Benefit Update</fullName>
                </value>
                <value>
                    <fullName>Call Handling</fullName>
                </value>
                <value>
                    <fullName>Change/Cancel</fullName>
                </value>
                <value>
                    <fullName>Change Service(s)</fullName>
                </value>
                <value>
                    <fullName>Check Eligibility</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Claim/Out of Pocket Expenses</fullName>
                </value>
                <value>
                    <fullName>Claim Correction / Tracking</fullName>
                </value>
                <value>
                    <fullName>Claim Priced/Paid Date</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client Password Reset by Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_VSPOne__c</fullName>
        <description>Used for VSPOne case record type.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Delays</fullName>
                </value>
                <value>
                    <fullName>Frame</fullName>
                </value>
                <value>
                    <fullName>Injury</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CallerType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2020Source Assistance</fullName>
                </value>
                <value>
                    <fullName>AOB/OON Provider</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Claim Payment</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Claims Adjustment</fullName>
                </value>
                <value>
                    <fullName>Client Benefits</fullName>
                </value>
                <value>
                    <fullName>Client Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Client Exceptions</fullName>
                </value>
                <value>
                    <fullName>Client Website Assistance</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Delays</fullName>
                </value>
                <value>
                    <fullName>Doctor Referral</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Eyefinity Assistance</fullName>
                </value>
                <value>
                    <fullName>Frame</fullName>
                </value>
                <value>
                    <fullName>Injury</fullName>
                </value>
                <value>
                    <fullName>Language Lines / Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Member Authorization</fullName>
                </value>
                <value>
                    <fullName>Member Benefits</fullName>
                </value>
                <value>
                    <fullName>Member Caller</fullName>
                </value>
                <value>
                    <fullName>Member Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Member Website Assistance</fullName>
                </value>
                <value>
                    <fullName>OON Caller</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Case__c</fullName>
        <label>Reason for Case</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account/Contact Maintenance</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Cancellations</fullName>
                </value>
                <value>
                    <fullName>Invoice Request</fullName>
                </value>
                <value>
                    <fullName>Eyeconic Site Issues</fullName>
                </value>
                <value>
                    <fullName>Opt Out / Unsubscribe</fullName>
                </value>
                <value>
                    <fullName>Prescriptions</fullName>
                </value>
                <value>
                    <fullName>Price Matching</fullName>
                </value>
                <value>
                    <fullName>Promos / Appeasements</fullName>
                </value>
                <value>
                    <fullName>Redos / Exchanges / Returns</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Account/Contact Maintenance - Dragon</fullName>
                </value>
                <value>
                    <fullName>Billing - Dragon</fullName>
                </value>
                <value>
                    <fullName>Cancellations - Dragon</fullName>
                </value>
                <value>
                    <fullName>Invoice Request - Dragon</fullName>
                </value>
                <value>
                    <fullName>Dragon Site Issues - Dragon</fullName>
                </value>
                <value>
                    <fullName>Opt Out / Unsubscribe - Dragon</fullName>
                </value>
                <value>
                    <fullName>Price Matching - Dragon</fullName>
                </value>
                <value>
                    <fullName>Promos / Appeasements - Dragon</fullName>
                </value>
                <value>
                    <fullName>Refunds / Exchanges - Dragon</fullName>
                </value>
                <value>
                    <fullName>Shipping - Dragon</fullName>
                </value>
                <value>
                    <fullName>Status - Dragon</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Exchange / Warranty</fullName>
                </value>
                <value>
                    <fullName>Website issues</fullName>
                </value>
                <value>
                    <fullName>Itemized Receipt</fullName>
                </value>
                <value>
                    <fullName>Product Appeasements (Waiting Fulfillment)</fullName>
                </value>
                <value>
                    <fullName>Email Address Change</fullName>
                </value>
                <value>
                    <fullName>Shipping Address Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Contact__c</fullName>
        <label>Reason for Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account/Contact Maintenance</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Benefits - In-Network</fullName>
                </value>
                <value>
                    <fullName>Benefits - Insurance</fullName>
                </value>
                <value>
                    <fullName>Benefits - Out-Of-Network</fullName>
                </value>
                <value>
                    <fullName>Billing/Charges</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>COB</fullName>
                </value>
                <value>
                    <fullName>Cobra/Enrollment</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Dr List</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Exchange/Refund</fullName>
                </value>
                <value>
                    <fullName>Frame Adjustment</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>ID Card Requests</fullName>
                </value>
                <value>
                    <fullName>Individual Plans</fullName>
                </value>
                <value>
                    <fullName>Level App</fullName>
                </value>
                <value>
                    <fullName>Level Frame - Charging</fullName>
                </value>
                <value>
                    <fullName>Level Frame - Tech</fullName>
                </value>
                <value>
                    <fullName>Level Tech Support</fullName>
                </value>
                <value>
                    <fullName>Level Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Material - Contacts</fullName>
                </value>
                <value>
                    <fullName>Material - Frames Only</fullName>
                </value>
                <value>
                    <fullName>Material - Glasses</fullName>
                </value>
                <value>
                    <fullName>Material - Lenses Only</fullName>
                </value>
                <value>
                    <fullName>Member ID Inquiry</fullName>
                </value>
                <value>
                    <fullName>Member Info Not Found</fullName>
                </value>
                <value>
                    <fullName>My Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_REW_or_Cancellation__c</fullName>
        <inlineHelpText>Enter in the Reason for Refund, Exchange, Warranty or Cancellation</inlineHelpText>
        <label>Reason for REW or Cancellation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong prescription</fullName>
                </value>
                <value>
                    <fullName>Lens package</fullName>
                </value>
                <value>
                    <fullName>Incorrect Fit</fullName>
                </value>
                <value>
                    <fullName>Damaged Product</fullName>
                </value>
                <value>
                    <fullName>Brand Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Defective Product</fullName>
                </value>
                <value>
                    <fullName>Wait is too long</fullName>
                </value>
                <value>
                    <fullName>No Insurance applied</fullName>
                </value>
                <value>
                    <fullName>Change Product</fullName>
                </value>
                <value>
                    <fullName>Didn’t Like</fullName>
                </value>
                <value>
                    <fullName>No Reason</fullName>
                </value>
                <value>
                    <fullName>Seg Height</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_to_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred to Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relation_to_Member__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre-Chat Relation to Member</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Skill_Level__c</fullName>
        <formula>TEXT($User.Skill_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Skill Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Received_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SFDC-11282</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_of_Contact_Formula_1__c</fullName>
        <formula>IF(OR(INCLUDES(Reason_for_Contact__c, &quot;Adjustments&quot;), INCLUDES(Reason_for_Contact__c, &quot;Claims&quot;)), &quot;Provided Claim(s) Information for Customer;&quot;, &quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Authorization&quot; ),&quot;Provided Authorization Services for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Benefits - In-Network&quot; ),&quot;Provided In-Network Benefits Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Benefits - Insurance&quot; ),&quot;Provided Insurance Benefits Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Benefits - Out-Of-Network&quot; ),&quot;Provided Out-Of-Network Benefits Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Billing/Charges&quot; ),&quot;Provided Eyeconic Billing Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;COB&quot; ),&quot;Provided Coverage/Claims Coordination of Benefits Information with Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Cobra/Enrollment&quot; ),&quot;Provided Benefits Information for Customer regarding Cobra or Open Enrollment Coverage;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Cost&quot; ),&quot;Provided cost of Glasses information for Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Dr List&quot; ),&quot;Provided Dr List for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Eligibility&quot; ),&quot;Provided Eligibility Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(AND(ISPICKVAL(Product__c, &quot;Marketing&quot;),INCLUDES(Reason_for_Contact__c, &quot;General Inquiry&quot;)), &quot;Communicating Value of VSP Benefits and Services to Customers;&quot;, &quot;&quot;)&amp; 
IF(AND(ISPICKVAL(Product__c, &quot;Molina&quot;),INCLUDES(Reason_for_Contact__c, &quot;General Inquiry&quot;)), &quot;Resolving After Hours Communications with Customers;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;ID Card Requests&quot; ),&quot;Assisted Customer with ID Card Request;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Individual Plans&quot; ),&quot;Provided Individual Plan Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Level App&quot; ),&quot;Provided Level Application Information to Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Level Frame - Charging&quot; ),&quot;Provided Level Frame Charging Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Level Frame - Tech&quot; ),&quot;Provided Level Frame Tech Information for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Level Tech Support&quot; ),&quot;Provided Level Tech Support for Customer;&quot;,&quot;&quot;) &amp; 
IF(INCLUDES(Reason_for_Contact__c, &quot;Level Troubleshooting&quot; ),&quot;Provided Level Troubleshooting Information for Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Material - Contacts&quot; ),&quot;Assisted Customer with Contact Lens Material Inquiry;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Material - Frames Only&quot; ),&quot;Assisted Customer with Frames Only Material Inquiry;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Material - Glasses&quot; ),&quot;Assisted Customer with Glasses Material Inquiry;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Material - Lenses Only&quot; ),&quot;Assisted Customer with Spectacle Lenses Only Material Inquiry;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Member ID Inquiry&quot; ),&quot;Assisted Customer with Member ID Inquiry;&quot;,&quot;&quot;)&amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Member Info Not Found&quot; ),&quot;Provided Member Info to Customer;&quot;,&quot;&quot;)</formula>
        <label>Resolution of Contact Formula 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_of_Contact_Formula_2__c</fullName>
        <formula>IF(INCLUDES(Reason_for_Contact__c, &quot;My Account&quot; ),&quot;Assisted Customer with Eyeconic My Account Issues;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order - Cancellation&quot; ),&quot;Assisted Customer with Cancellation of their Eyeconic Order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order - Existing&quot; ),&quot;Assisted Customer with existing Eyeconic Order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order - New&quot; ),&quot;Assisted Customer with new Eyeconic Order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order - Other&quot; ),&quot;Assisted Customer with Eyeconic Order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order - Status&quot; ),&quot;Provided Eyeconic Order Status Information for customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Prescription&quot; ),&quot;Provided Eyeconic Prescription Information for Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Price Match&quot; ),&quot;Provided Eyeconic Price Matching Information for Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Promotions&quot; ),&quot;Provided Promotion Offers to Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Refund/Exchange&quot; ),&quot;Provided Eyeconic Returns or Exchanges Information to Customer;&quot;,&quot;&quot;) &amp;
IF(OR(INCLUDES(Reason_for_Contact__c, &quot;SPAM&quot;),INCLUDES(Reason_for_Contact__c, &quot;Undeliverable&quot;)), &quot;Auto Response or Spam Received from Customer;&quot;, &quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;TPA&quot; ),&quot;Provided TPA Billing/Enrollment/Cancellation/Reinstatement Information to Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Warranty&quot; ),&quot;Provided Eyeconic Product Warranty Information to Customer;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Website Issues - Eyeconic.com&quot; ),&quot;Provided/Reviewed Website Navigation for Eyeconic.com;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Website Issues - Level Technology&quot; ),&quot;Provided/Reviewed Website Navigation for Level;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Website Issues - MetLife.com&quot; ),&quot;Provided/Reviewed Website Navigation for MetLife;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Website Issues - VSP.com&quot; ),&quot;Provided/Reviewed Website Navigation for VSP.com;&quot;,&quot;&quot;) &amp;



IF(INCLUDES(Reason_for_Contact__c, &quot;My Account - Dragon&quot; ),&quot;Provided Dragon account information to a customer as it pertains to their Dragon order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order Status - Dragon&quot; ),&quot;Provided the status information to a customer as it pertains to their Dragon order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order New - Dragon&quot; ),&quot;Provided information to a customer as it pertains to their new Dragon order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order Existing - Dragon&quot; ),&quot;Provided information to a customer as it pertains to their existing Dragon order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Order Other - Dragon&quot; ),&quot;Provided other information to a customer as it pertains to their Dragon order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Warranty - Dragon&quot; ),&quot;Provided warranty information to a customer as it pertains to their Dragon order;&quot;,&quot;&quot;) &amp;
IF(INCLUDES(Reason_for_Contact__c, &quot;Website Issues - DragonAlliance.com&quot; ),&quot;Answered questions of a customer as it pertains to the DragonAlliance.com website;&quot;,&quot;&quot;) &amp;









IF(INCLUDES(Reason_for_Contact__c, &quot;Other&quot; ),&quot;Answered questions about other topics;&quot;,&quot;&quot;)</formula>
        <label>Resolution of Contact Formula 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_of_Contact_Text__c</fullName>
        <description>Concatenates the Resolution of Contact values from formula fields</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution of Contact Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>